= Change log

1.5.1::
* New `preprocess` task will run all preprocessors at once.

1.5.0::
* `Goattracker`: Support for `gt2reloc` CLI tool as a preprocessor.

1.4.5::
* Deprecated Gradle API call removed, we're ready for Gradle 8.0 now.

1.4.4::
* `Charpad`: Support for final CTM file format (as for now both CTM 8 and CTM 8.2 are supported) - be warned, that this is an interim situation, after 1st Jan, 2021 both versions will be merged into CTM 8 and old "beta" CTM 8 format won't be supported any longer.

1.4.3::
* Bugfix: `Charpad` Fixing order of colours (nybbles) in screen memory matrix for bitmap export.

1.4.2::
* `Charpad` Support of tile tags data export.
* `Charpad` Support of meta data export to the ASM file.
* Bugfix: `Charpad` Fixing char colour assignment for colouring per char in CTM v.8.
* Bugfix: `Charpad` CTM v.8 will generate char attributes output even if no per-char colouring method is used (for backward compatibility).
* Bugfix: `Charpad` Char colours output won't be generated if per-char colouring method is not used.

1.4.1::
* Bugfix: `Charpad` Fixing bitmap mode color layout in palette.

1.4.0::
* `Charpad` Support for CTM v.8 file format.
* `Charpad` Support for producing charset colours, screen colours and charset materials.
* `Charpad` Support for producing tile screen colours.

1.3.0::
* `Spritepad` Support for SPD v.4, 5 file format.

1.2.0::
* `Charpad` Support for CTM v.6, 7 file format.

1.1.1::
* Bugfix: #26 `Charpad` Fixed map generation in CTM files without Tileset.

1.1.0::
* Support for `-define` parameters.
* `Charpad` Support added (CTM v.5).
* Support for Gradle 7.

1.0.1::
* Support for Gradle 6.

1.0.0::
* Support for running 64spec tests using console mode of Vice.
* Support for CircleCI environment via dedicated Docker image.
* Work dir (.ra) can now be changed.

0.3.0::
* Support for source files patterns via includes.
* Support for excluding source files via patterns.

0.2.1::
* Support for Gradle 5.